[gd_scene load_steps=5 format=3 uid="uid://b88b3ell8pfih"]

[ext_resource type="Script" uid="uid://bveltrx3av83w" path="res://Scripts/egg.gd" id="1_1iuog"]
[ext_resource type="Texture2D" uid="uid://k26l1kr27um3" path="res://Assets/Sprites/Egg/Egg_full_202510201925_57344.png" id="2_85tk0"]
[ext_resource type="FontFile" uid="uid://w54u7a0mjjv7" path="res://Assets/Sprites/Fonts/Cute Dino.ttf" id="3_85tk0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1iuog"]
radius = 907.0
height = 2424.0

[node name="Egg" type="Area2D"]
script = ExtResource("1_1iuog")

[node name="egg_sprite" type="Sprite2D" parent="."]
position = Vector2(-9.536743e-07, -9.536743e-07)
scale = Vector2(1.015, 1)
texture = ExtResource("2_85tk0")

[node name="egg_collision_shape" type="CollisionShape2D" parent="."]
position = Vector2(96, -2)
shape = SubResource("CapsuleShape2D_1iuog")

[node name="egg_hp" type="Label" parent="."]
offset_left = -1097.0
offset_top = -1536.0
offset_right = 1365.0
offset_bottom = -946.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 45
theme_override_fonts/font = ExtResource("3_85tk0")
theme_override_font_sizes/font_size = 250
text = "Click the egg!!!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
